--- a/main.html
+++ b/main.html
@@ -8,87 +8,87 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>HTML Element Type Identification</h1>
+<h1>HTML Element Type Identification</h1>
     <p>Each element is rendered twice to demonstrate whether it displays as block or inline:</p>
 
     <div class="test-container">
         <div>
             <button data-ns-test="block-inline-button">Test1</button>
             <button data-ns-test="block-inline-button">Test2</button>
+            Answer: Inline
         </div>
-        <div class="answer">Answer: Inline</div>
     </div>
 
     <div class="test-container">
         <div>
             <div data-ns-test="block-inline-div">Test1</div>
             <div data-ns-test="block-inline-div">Test2</div>
+            Answer: Block
         </div>
-        <div class="answer">Answer: Block</div>
     </div>
 
     <div class="test-container">
         <div>
             <span data-ns-test="block-inline-span">Test1</span>
             <span data-ns-test="block-inline-span">Test2</span>
+            Answer: Inline
         </div>
-        <div class="answer">Answer: Inline</div>
     </div>
 
     <div class="test-container">
         <div>
             <p data-ns-test="block-inline-p">Test1</p>
             <p data-ns-test="block-inline-p">Test2</p>
+            Answer: Block
         </div>
-        <div class="answer">Answer: Block</div>
     </div>
 
     <div class="test-container">
         <div>
             <input data-ns-test="block-inline-input" value="Test1">
             <input data-ns-test="block-inline-input" value="Test2">
+            Answer: Inline
         </div>
-        <div class="answer">Answer: Inline</div>
     </div>
 
     <div class="test-container">
         <div>
             <cite data-ns-test="block-inline-cite">Test1</cite>
             <cite data-ns-test="block-inline-cite">Test2</cite>
+            Answer: Inline
         </div>
-        <div class="answer">Answer: Inline</div>
     </div>
 
     <div class="test-container">
         <div>
             <code data-ns-test="block-inline-code">Test1</code>
             <code data-ns-test="block-inline-code">Test2</code>
+            Answer: Inline
         </div>
-        <div class="answer">Answer: Inline</div>
     </div>
 
     <div class="test-container">
         <div>
             <h1 data-ns-test="block-inline-h1">Test1</h1>
             <h1 data-ns-test="block-inline-h1">Test2</h1>
+            Answer: Block
         </div>
-        <div class="answer">Answer: Block</div>
     </div>
 
     <div class="test-container">
         <div>
             <sup data-ns-test="block-inline-sup">Test1</sup>
             <sup data-ns-test="block-inline-sup">Test2</sup>
+            Answer: Inline
         </div>
-        <div class="answer">Answer: Inline</div>
     </div>
 
     <div class="test-container">
         <div>
             <sub data-ns-test="block-inline-sub">Test1</sub>
             <sub data-ns-test="block-inline-sub">Test2</sub>
+            Answer: Inline
         </div>
-        <div class="answer">Answer: Inline</div>
     </div>
     <script type="text/javascript" src="./script.js">
 		
